Cleaning up the deployment scripts

--- a/setup-bosh-environment/.envrc
+++ b/setup-bosh-environment/.envrc
@@ -3,13 +3,13 @@ export GOOGLE_REGION="us-east1"
 export GOOGLE_ZONE="us-east1-c"
 export GCP_ACCOUNT_NAME="$(gcloud auth list --format json|jq -r '.[].account')"
 export GCP_PROJECT="$GOOGLE_PROJECT"
-export INTERACTIVE="true"
+export SERVICE_ACCOUNT_NAME=${SERVICE_ACCOUNT_NAME:-s1pbosh}
 
-GCP_PROJECT=$DEVSHELL_PROJECT_ID
-SERVICE_ACCOUNT_NAME=${SERVICE_ACCOUNT_NAME:-s1pbosh}
-
+## bbl
 export BBL_IAAS="gcp"
 export BBL_GCP_REGION="us-east1"
 export BBL_GCP_SERVICE_ACCOUNT_KEY="$SERVICE_ACCOUNT_NAME.key.json"
 
-eval "$(bbl print-env)"
+if [ -f bbl-state.json ]; then
+  eval "$(bbl print-env)"
+fi
