--- a/.envrc
+++ b/.envrc
@@ -8,8 +8,11 @@ export SERVICE_ACCOUNT_NAME=${SERVICE_ACCOUNT_NAME:-s1pbosh}
 ## bbl
 export BBL_IAAS="gcp"
 export BBL_GCP_REGION="us-east1"
-export BBL_GCP_SERVICE_ACCOUNT_KEY="$SERVICE_ACCOUNT_NAME.key.json"
+export BBL_GCP_SERVICE_ACCOUNT_KEY=~/s1p-bosh-lab/setup-bosh-environment/$SERVICE_ACCOUNT_NAME.key.json
+export BBL_STATE_DIRECTORY=~/s1p-bosh-lab/setup-bosh-environment
 
-if [ -f bbl-state.json ]; then
-  eval "$(bbl print-env)"
-fi
+pushd $BBL_STATE_DIRECTORY
+  if [ -f bbl-state.json ]; then
+    eval "$(bbl print-env)"
+  fi
+popd
